@@ -1,6 +1,21 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+@file:Suppress("VulnerableLibrariesLocal")
+
+import org.apache.commons.io.FileUtils
 import org.jetbrains.changelog.Changelog
 import org.jetbrains.changelog.markdownToHTML
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.w3c.dom.Document
+import java.lang.StringBuilder
+import java.io.File
+import java.io.BufferedReader
+import java.io.ByteArrayInputStream
+import java.io.InputStreamReader
+import java.net.HttpURLConnection
+import java.net.URL
+import java.nio.file.Files
+import javax.xml.parsers.DocumentBuilderFactory
+import javax.xml.xpath.XPathConstants
+import javax.xml.xpath.XPathFactory
 
 interface Injected {
     @get:Inject val fs: FileSystemOperations
@@ -26,42 +41,49 @@ val pluginGradleVersion: String by project
 val sourceCompatibility: String by project
 val pluginRepositoryUrl: String by project
 val platformType: String by project
+val platformVersion: String by project
 
-val pluginIdeaVersion = pluginUntilBuild
+
+val pluginIdeaVersion = "2023.2"
 
 plugins {
     // Java support
     id("java")
     // Kotlin support
-    id("org.jetbrains.kotlin.jvm") version "1.8.0"
-    // Gradle IntelliJ Plugin
+    id("org.jetbrains.kotlin.jvm") version "2.0.0-Beta3"
+    // gradle-intellij-plugin - read more: https://github.com/JetBrains/gradle-intellij-plugin
+    id("org.jetbrains.changelog") version "2.2.0"    // Gradle Changelog Plugin "com.intellij.clion"
     id("org.jetbrains.intellij") version "1.17.4"
-    // Gradle Changelog Plugin
-    id("org.jetbrains.changelog") version "2.0.0"
-    // Gradle Qodana Plugin
-    id("org.jetbrains.qodana") version "0.1.13"
-    // Gradle Kover Plugin
-    id("org.jetbrains.kotlinx.kover") version "0.6.1"
+    id("org.jetbrains.kotlinx.kover") version "0.7.4"    // Gradle Kover Plugin
+    kotlin("plugin.serialization") version "1.9.22"
 }
 
-group = properties("pluginGroup")
-version = properties("pluginVersion")
 
-repositories {
-    maven("https://oss.sonatype.org/content/repositories/snapshots/")
-    maven("https://packages.jetbrains.team/maven/p/ij/intellij-dependencies")
-    maven("https://www.jetbrains.com/intellij-repository/releases")
-    gradlePluginPortal()
-    mavenCentral()
-}
+group = properties("pluginGroup").get()
+version = properties("pluginVersion").get()
+
+
+val junitVersion = "5.11.0-M2"
+val junitPlatformLauncher = "1.11.0-M2"
+
 
 val service = project.extensions.getByType<JavaToolchainService>()
 val customLauncher = service.launcherFor {
         languageVersion.set(JavaLanguageVersion.of(17))
 }
 
+// Configure project's dependencies
+repositories {
+    maven("https://packages.jetbrains.team/maven/p/ij/intellij-dependencies")
+    maven("https://www.jetbrains.com/intellij-repository/releases")
+    gradlePluginPortal()
+    mavenCentral()
+}
+
 dependencies {
+// https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient
     implementation("org.jetbrains:marketplace-zip-signer:0.1.24")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.0-RC")
 }
 abstract class UpdatePluginXml : DefaultTask() {
 
@@ -80,37 +102,29 @@ abstract class UpdatePluginXml : DefaultTask() {
     }
 }
 
-// Configure Gradle IntelliJ Plugin
-// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
 intellij {
-    pluginName.set(properties("pluginName"))
-    version.set(properties("platformVersion"))
-    type.set(properties("platformType"))
-    downloadSources.set(!System.getenv().containsKey("UI"))
-    updateSinceUntilBuild.set(false)
-    plugins = properties("platformPlugins").map { it.split(',').map(String::trim).filter(String::isNotEmpty) }
+    pluginName = properties("pluginName")
+    version = properties("platformVersion")
+    type = properties("platformType")
+
+    downloadSources.set(!System.getenv().containsKey("CI"))
+    updateSinceUntilBuild.set(true)
+
+    sandboxDir.set("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}")
+
+    downloadSources.set(!System.getenv().containsKey("CI"))
+    downloadSources.set(pluginDownloadIdeaSources.toBoolean() && !System.getenv().containsKey("IU"))
+    instrumentCode.set(true)
+    plugins.set(listOf("JavaScript"))
 
     sandboxDir.set(project.rootDir.canonicalPath + "/.sandbox")
-}
-// Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
-changelog {
-    groups.set(emptyList())
-    repositoryUrl.set(properties("pluginRepositoryUrl"))
-}
 
-// Configure Gradle Qodana Plugin - read more: https://github.com/JetBrains/gradle-qodana-plugin
-qodana {
-    cachePath.set(file(".qodana").canonicalPath)
-    reportPath.set(file("build/reports/inspections").canonicalPath)
-    saveReport.set(true)
-    showReport.set(System.getenv("QODANA_SHOW_REPORT")?.toBoolean() ?: false)
 }
-
+// Set the JVM language level used to build the project.
 kotlin {
-    jvmToolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
-    }
+    jvmToolchain(17)
 }
+
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     toolchain {
@@ -118,30 +132,59 @@ java {
     }
 }
 
-kover.xmlReport {
-    onCheck.set(true)
-}
+
 tasks {
+    // Set the compatibility versions to 1.8
     // Set the JVM compatibility versions
     withType<JavaCompile> {
-        sourceCompatibility = "17"
-        targetCompatibility = "17"
+        sourceCompatibility = pluginJavaVersion
+        targetCompatibility = pluginJavaVersion
+        options.compilerArgs = listOf("-Xlint:deprecation")
+        options.encoding = "UTF-8"
     }
     withType<org.jetbrains.kotlin.gradle.tasks.UsesKotlinJavaToolchain>().configureEach {
         kotlinJavaToolchain.toolchain.use(customLauncher)
     }
     withType<KotlinCompile> {
-        kotlinOptions.jvmTarget = "17"
+        kotlinOptions.jvmTarget = sourceCompatibility
+    }
+    patchPluginXml {
+        sinceBuild.set("233")
+        untilBuild.set("233.*")
+    }
+
+    runIde {
+        dependsOn("clearSandboxedIDESystemLogs")
+
+        maxHeapSize = "1g" // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html
+
+        // force detection of slow operations in EDT when playing with sandboxed IDE (SlowOperations.assertSlowOperationsAreAllowed)
+        jvmArgs("-Dide.slow.operations.assertion=true")
+
+        if (pluginEnableDebugLogs.toBoolean()) {
+            systemProperties(
+                "idea.log.debug.categories" to "#com.github.bgomar.consolelogger"
+            )
+        }
+
+        autoReloadPlugins.set(false)
+
+        // If any warning or error with missing --add-opens, wait for the next gradle-intellij-plugin's update that should sync
+        // with https://raw.githubusercontent.com/JetBrains/intellij-community/master/plugins/devkit/devkit-core/src/run/OpenedPackages.txt
+        // or do it manually
+    }
+    buildSearchableOptions {
+        enabled = false
     }
     wrapper {
-        gradleVersion= "7.6"
+        gradleVersion = properties("gradleVersion").get()
     }
 
     patchPluginXml {
-        version.set(properties("pluginVersion"))
-        sinceBuild.set(properties("pluginSinceBuild"))
-        untilBuild.set(properties("pluginUntilBuild"))
-
+        version = properties("pluginVersion")
+        sinceBuild = properties("pluginSinceBuild")
+        untilBuild = properties("pluginUntilBuild")
+        updatePluginXml()
         // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
         pluginDescription.set(
             file("README.md").readText().lines().run {
@@ -167,19 +210,15 @@ tasks {
         })
     }
 
+    buildSearchableOptions {
+        enabled = false
+    }
     compileKotlin {
-        kotlinOptions.jvmTarget = "17"
+        kotlinOptions.jvmTarget = jvmTarget
     }
 
     compileTestKotlin {
-        kotlinOptions.jvmTarget = "17"
-    }
-
-    runIdeForUiTests {
-        systemProperty("robot-server.port", "8082")
-        systemProperty("ide.mac.message.dialogs.as.sheets", "false")
-        systemProperty("jb.privacy.policy.text", "<!--999.999-->")
-        systemProperty("jb.consents.confirmation.enabled", "false")
+        kotlinOptions.jvmTarget = jvmTarget
     }
 
     signPlugin {
@@ -193,7 +232,33 @@ tasks {
         token = environment("PUBLISH_TOKEN")
         channels = properties("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
     }
+
+    patchPluginXml {
+        changeNotes.set(
+            """<br>
+
+        """
+        )
+    }
 }
+
+
+
+/** Return an IDE version string without the optional PATCH number.
+ * In other words, replace IDE-MAJOR-MINOR(-PATCH) by IDE-MAJOR-MINOR. */
+fun shortenIdeVersion(version: String): String {
+    if (version.contains("SNAPSHOT", ignoreCase = true)) {
+        return version
+    }
+    val matcher = Regex("[A-Za-z]+[\\-]?[0-9]+[\\.]{1}[0-9]+")
+    return try {
+        matcher.findAll(version).map { it.value }.toList()[0]
+    } catch (e: Exception) {
+        logger.warn("Failed to shorten IDE version $version: ${e.message}")
+        version
+    }
+}
+
 
 operator fun Any.get(key: String): Any {
     return key
@@ -217,12 +282,16 @@ fun generateConsoleLoggerActionsXml(): String {
 
 fun createActionXml(i: Int): String {
     val actionXml: StringBuilder = StringBuilder()
-    actionXml.append("\n             <action id=\"com.github.bgomar.consolelogger.add").append(i).append("\" class=\"com.github.bgomar.consolelogger" +
-            ".ConsoleLoggerAction").append("\"\n")
-    actionXml.append("                    text=\"").append(i-1).append("\"\n")
+    actionXml.append("\n             <action id=\"com.github.bgomar.consolelogger.add").append(i).append(
+        "\" class=\"com.github.bgomar.consolelogger" +
+                ".ConsoleLoggerAction"
+    ).append("\"\n")
+    actionXml.append("                    text=\"").append(i - 1).append("\"\n")
     actionXml.append("                    description=\"Generate a console.log() for that variable\">\n")
-    actionXml.append("                 <keyboard-shortcut keymap=\"\$default\" first-keystroke=\"ctrl alt ").append(i).append("\"/>\n")
-    actionXml.append("                 <keyboard-shortcut keymap=\"Mac OS X\" first-keystroke=\"ctrl alt ").append(i).append("\"/>\n")
+    actionXml.append("                 <keyboard-shortcut keymap=\"\$default\" first-keystroke=\"ctrl alt ")
+        .append(i).append("\"/>\n")
+    actionXml.append("                 <keyboard-shortcut keymap=\"Mac OS X\" first-keystroke=\"ctrl alt ")
+        .append(i).append("\"/>\n")
     actionXml.append("             </action>\n")
 
     return actionXml.toString()
@@ -249,3 +318,4 @@ fun updatePluginXml() {
         throw GradleException("Plugin description section not found in src/main/resources/META-INF/plugin.xml")
     }
 }
+
